--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.17.0
   image_picker: ^0.8.5+3
   charts_flutter: ^0.12.0
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
